# HW04

./: CMakeLists.txt  README.md
.github/workflows/: appveyor.yml  build.yml  linux.yml  win.yml
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
